--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -14,7 +14,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
-    "next": "13.5.6",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18"
   },
