--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -14,6 +14,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "flowbite": "^2.1.1",
+    "flowbite-react": "^0.6.4",
     "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18"
